# Design-Assistant

./: README.md  USE_CASES.md  agents.md
.skills/openclaw-skills/skills/0xnyk/xint-rs/: CHANGELOG.md  Cargo.toml  README.md  SKILL.md  _meta.json  install.sh
.skills/openclaw-skills/skills/0xnyk/xint-rs/.github/: ISSUE_TEMPLATE.md
.skills/openclaw-skills/skills/0xnyk/xint-rs/scripts/: release.sh  xai_collections.py  xai_x_search_scan.py
.skills/openclaw-skills/skills/0xnyk/xint-rs/src/: action_result.rs  cache.rs  cli.rs  client.rs  config.rs  costs.rs  costs_test.rs  errors.rs  format.rs  main.rs  mcp.rs  mcp_dispatcher.rs  models.rs  output_meta.rs  policy.rs  reliability.rs  sentiment.rs  spinner.rs  webhook.rs
.skills/openclaw-skills/skills/1146345502/reddit-skills/: CONTRIBUTING.md  LICENSE.md  README.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/1146345502/reddit-skills/extension/: background.js  dom_commands.js  manifest.json
.skills/openclaw-skills/skills/1146345502/reddit-skills/scripts/: bridge_server.py  cli.py  image_downloader.py
.skills/openclaw-skills/skills/199-bio/clinstagram/: README.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/199-bio/clinstagram/tests/: conftest.py  test_backends_base.py  test_capabilities.py  test_cli.py  test_config.py  test_config_persistence.py  test_dispatch.py  test_e2e.py  test_keychain.py  test_media.py  test_models.py  test_private_login.py  test_router.py
.skills/openclaw-skills/skills/2233admin/cli2skill/: ARTICLE.md  README.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/2233admin/cli2skill/cli2skill/: __init__.py  generator.py  main.py  mcp2skill.py  parser.py
.skills/openclaw-skills/skills/2233admin/cli2skill/examples/: github-cli.md  memu.md
.skills/openclaw-skills/skills/7487/lp-lobster-crawler/: AGENTS.md  CLAUDE.md  README.md  SKILL.md  _meta.json  agent.md  docker-compose.yaml  pyproject.toml  requirements.txt  scrapy.cfg
.skills/openclaw-skills/skills/7487/lp-lobster-crawler/config/: settings.yaml
.skills/openclaw-skills/skills/7487/lp-lobster-crawler/docs/: FEEDBACK.md  MEMORY.md  STATE.md  TODO.md
.skills/openclaw-skills/skills/7487/lp-lobster-crawler/prompts/: claude_loop_prompt.txt
.skills/openclaw-skills/skills/7487/lp-lobster-crawler/scripts/: claude_loop.sh
.skills/openclaw-skills/skills/7487/lp-lobster-crawler/src/: __init__.py  cli.py  config.py  logging_config.py  rss.py  scrapy_settings.py
.skills/openclaw-skills/skills/7487/lp-lobster-crawler/tests/: test_broadcast.py  test_config.py  (+2 more)
.skills/openclaw-skills/skills/abyousef739/clawskillshield/: .gitignore  README.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/aeromomo/cut-your-tokens-97percent-savings-on-session-transcripts-via-observation-extraction/: README.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/alan5168/fapiao-clipper/: CLAWHUB.md  README.md  SKILL.md  _meta.json  app.py  docker-compose.yml  invoice.sh  main.py  pyproject.toml  requirements.txt  setup_config.py  update_readme.py
.skills/openclaw-skills/skills/alopez3006/snipara-mcp/: README.md  _meta.json  pyproject.toml  skill.md
.skills/openclaw-skills/skills/amascia-gg/ggshield-scanner/: README.md  SKILL.md  _meta.json  ggshield_skill.py  pyproject.toml
.skills/openclaw-skills/skills/and3rn3t/apple-music-dj/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  _meta.json  clawhub.json  pyproject.toml  requirements.txt
.skills/openclaw-skills/skills/and3rn3t/apple-photos-cleaner/: README.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/anoyix/stock-cli/: README.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/aplanckfish/polymarket-autotrade/: SKILL.md  _meta.json  pyproject.toml  requirements.txt  skill.py
.skills/openclaw-skills/skills/avegancafe/linear-todos/: README.md  SECURITY.md  _meta.json  cron-jobs.txt  main.py  pyproject.toml
.skills/openclaw-skills/skills/awlevin/flight-search/: AGENTS.md  CHANGELOG.md  README.md  SKILL.md  _meta.json  install.sh  pyproject.toml
.skills/openclaw-skills/skills/benthecarman/mutinynet-cli/: Cargo.toml  README.md  SKILL.md  _meta.json
.skills/openclaw-skills/skills/benthecarman/orange-wallet/: Cargo.toml  README.md  SKILL.md  _meta.json
.skills/openclaw-skills/skills/bkmashiro/vfs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP-v2.md  SECURITY.md  SKILL.md  _meta.json  cli.py  config.yaml  playground.py  providers.py  pyproject.toml
.skills/openclaw-skills/skills/blaspat/feelings-framework/: CORE.md  README.md  SKILL.md  _meta.json  pyproject.toml  setup.py
.skills/openclaw-skills/skills/blue8x/mindclaw/: CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  _meta.json  clawhub.yaml  pyproject.toml
.skills/openclaw-skills/skills/bossandy123/yintai-tasks-runner/: README.md  SKILL.md  __init__.py  __main__.py  _meta.json  api_client.py  config.py  executor.py  install.sh  pyproject.toml  skill.py
.skills/openclaw-skills/skills/boxjod/box2robot-skills/: README.md  SKILL.md  SKILLS.md  _meta.json  b2r.py  pyproject.toml
.skills/openclaw-skills/skills/bu-bu-xxx/smart-email-assistant/: README.md  README_EN.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/caidongyun/agent-security-dlp/: CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt
.skills/openclaw-skills/skills/ceoqveda/linkedin-skills/: README.md  SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/cerbug45/agentmesh/: README.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt
.skills/openclaw-skills/skills/charantejmandali18/voice-assistant/: SKILL.md  _meta.json  pyproject.toml
.skills/openclaw-skills/skills/chatgpt34993/llm-key-pool/: .gitignore  README.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt  skill.yaml
.skills/openclaw-skills/skills/cheenu1092-oss/tokenmeter/: QUICKREF.md  README.md  SKILL.md  TASK.md  _meta.json  pyproject.toml
(+283300 files in other folders)
