[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-crawler-skill"
version = "0.1.0"
description = "龙虾平台网络内容爬取技能 — 定向抓取 Webnovel/ReelShorts 等站点"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "scrapy>=2.11,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "apscheduler>=3.10,<4.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
    "jinja2>=3.1,<4.0",
    "requests>=2.31,<3.0",
    "structlog>=24.0",
    "feedgen>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
lobster = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
