[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clawskillshield"]

[project]
name = "clawskillshield"
version = "0.1.1"
description = "Local-first security scanner for OpenClaw skills – usable by humans (CLI) and autonomous agents/Moltbots (import)."
authors = [{name = "Ab Yousef", email = "contact@clawskillshield.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["openclaw", "security", "scanner", "clawhub", "ai-agents", "moltbots"]

[project.urls]
Homepage = "https://github.com/AbYousef739/clawskillshield"
Repository = "https://github.com/AbYousef739/clawskillshield"

[project.scripts]
clawskillshield = "clawskillshield.skill:run_cli"