[project]
name = "claw-compactor"
version = "1.0.0"
description = "Memory compression and token optimization skill for OpenClaw"
license = "MIT"
requires-python = ">=3.9"
readme = "references/README.md"
keywords = ["compression", "tokens", "llm", "memory", "openclaw"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

[project.optional-dependencies]
accurate = ["tiktoken>=0.5.0"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
