[project]
name = "snipara-mcp"
version = "2.2.0"
description = "MCP server for Snipara - Context optimization and Agent infrastructure for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Snipara", email = "support@snipara.com" }]
keywords = ["mcp", "llm", "context", "documentation", "snipara", "claude", "cursor", "rlm", "agents", "multi-agent", "swarm", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.25.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
rlm = ["rlm-runtime>=0.1.0"]

[project.scripts]
snipara-mcp = "snipara_mcp:main"
snipara-mcp-login = "snipara_mcp.auth:login_cli"
snipara-mcp-logout = "snipara_mcp.auth:logout_cli"
snipara-mcp-status = "snipara_mcp.auth:status_cli"

[project.urls]
Homepage = "https://snipara.com"
Documentation = "https://docs.snipara.com"
Repository = "https://github.com/alopez3006/snipara-mcp"

[build-system]
requires = ["hatchling<1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snipara_mcp"]

[tool.hatch.metadata]
license-files = []

[tool.ruff]
line-length = 100
target-version = "py310"
