[project]
name = "apple-music-dj"
version = "3.1.0"
description = "OpenClaw skill — personalized Apple Music curation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Andernet (Matthew Anderson)", email = "and3rn3t@icloud.com"},
]
keywords = ["apple-music", "musickit", "playlists", "personalization", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/and3rn3t/apple-music-dj"
Repository = "https://github.com/and3rn3t/apple-music-dj"
Issues = "https://github.com/and3rn3t/apple-music-dj/issues"
Changelog = "https://github.com/and3rn3t/apple-music-dj/blob/main/CHANGELOG.md"

[project.optional-dependencies]
token = ["PyJWT>=2.8.0,<3.0", "cryptography>=46,<46.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-v --tb=short"
