[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-photos-cleaner"
version = "1.0.0"
description = "Analyze, audit, and clean up your Apple Photos library via its SQLite database"
requires-python = ">=3.9"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (let formatter handle)
    "SIM108", # ternary operator (readability preference)
    "B028",   # stacklevel in warnings
    "UP015",  # open mode redundancy
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # allow fixture redefinition

[tool.ruff.lint.isort]
known-first-party = ["_common"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["scripts/*.py"]
