[project]
name = "flight-search"
version = "0.1.7"
description = "CLI tool to search Google Flights - prices, times, and airlines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aaron Levin", email = "awlevin@comcast.net" }
]
keywords = ["flights", "google-flights", "cli", "travel", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fast-flights>=2.0",
]

[project.scripts]
flight-search = "flight_search.cli:main"

[project.urls]
Homepage = "https://github.com/Olafs-World/flight-search"
Repository = "https://github.com/Olafs-World/flight-search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_search"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.0",
]
