[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feelings-framework"
version = "1.0.0"
description = "A general-purpose AI agent feelings engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "The Feelings Framework Authors"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/blaspat/feelings-framework"
Repository = "https://github.com/blaspat/feelings-framework"

[tool.setuptools.packages.find]
where = ["library/python"]
include = ["feelings*"]
