[project]
name = "box2robot-skills"
version = "0.3.0"
description = "Standalone CLI for controlling Box2Robot robotic arms via server HTTP API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8",
]

[project.scripts]
b2r = "b2r:main"

# ── Runtime configuration ─────────────────────────────────────────────
# Environment variables (all optional):
#   B2R_SERVER   Server URL          Default: https://robot.box2ai.com
#   B2R_TOKEN    JWT bearer token    Overrides ~/.b2r_token
#   B2R_DEVICE   Default device ID   Overrides auto-select
#
# Credential storage:
#   ~/.b2r_token   JSON file created on login with mode 0600.
#                  Contains {token, server, device}. Treat like an SSH key.
