[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-email"
version = "2.5.2"
description = "AI智能邮件管理助手，支持多邮箱 IMAP 收取、本地归档、AI智能判断紧急邮件、定时汇总推送"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw"}
]
keywords = ["email", "imap", "telegram", "ai", "smart"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
smart-email = "smart_email.__main__:main"

[project.urls]
Homepage = "https://github.com/openclaw/smart-email"
Repository = "https://github.com/openclaw/smart-email"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
