[project]
name = "agent-security-dlp"
version = "2.0.0"
description = "Enterprise DLP system with 146 rules for 20+ industries"
authors = [{name = "OpenClaw", email = "contact@openclaw.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["dlp", "security", "data-loss-prevention", "openclaw", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/caidongyun/agent-security-dlp"
Repository = "https://github.com/caidongyun/agent-security-dlp"
Documentation = "https://gitee.com/caidongyun/agent-security-dlp"

[project.scripts]
agent-dlp = "agent_dlp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
