[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "agentmesh"
version         = "1.1.0"
description     = "WhatsApp-style encrypted messaging for AI agents"
readme          = "README.md"
license         = {text = "MIT"}
authors         = [
    {name = "cerbug45"},
    {name = "Zeki"},
]
requires-python = ">=3.10"
keywords        = ["ai", "agents", "encryption", "messaging", "cryptography", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage      = "https://github.com/cerbug45/AgentMesh"
Documentation = "https://github.com/cerbug45/AgentMesh#readme"
"Bug Tracker" = "https://github.com/cerbug45/AgentMesh/issues"

[project.scripts]
agentmesh-hub = "agentmesh.hub_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentmesh*"]
