[project]
name = "voice-assistant"
version = "0.1.0"
description = "Real-time voice assistant skill for OpenClaw"
readme = "SKILL.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]

[tool.uv.scripts]
server = "python scripts/server.py"

[tool.ruff]
target-version = "py310"
line-length = 100
