[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenmeter"
version = "0.1.0"
description = "Track your AI API usage and costs across all providers — locally, privately."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yajat Singh" }
]
keywords = ["ai", "llm", "tokens", "cost", "tracking", "openai", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.scripts]
tokenmeter = "tokenmeter.cli:app"

[project.urls]
Homepage = "https://github.com/yajatns/tokenmeter"
Repository = "https://github.com/yajatns/tokenmeter"

[tool.hatch.build.targets.wheel]
packages = ["tokenmeter"]
